<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/generic_screen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_question" />

    <RadioGroup
        android:id="@+id/weatherRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/sunny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="setWeather"
            android:text="@string/sunny" />

        <RadioButton
            android:id="@+id/rainy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setWeather"
            android:text="@string/rainy" />

        <RadioButton
            android:id="@+id/partly_cloudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setWeather"
            android:text="@string/cloudy" />
        
        <RadioButton
            android:id="@+id/snowy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setWeather"
            android:text="@string/snowy" />

        

    </RadioGroup>
    
	<TextView
            android:id="@+id/temp_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_question" />
	
    <SeekBar
        android:id="@+id/temp_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_question" />

    <EditText
        android:id="@+id/cashbox_starting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
                android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    	<Button
    	    android:id="@+id/continue_weather"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:onClick="continueToPricing"
    	    android:text="@string/continue_text" />
</LinearLayout>