<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   		<TextView
   		    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/school_title"
    	    />

   		<Spinner
   		    android:id="@+id/school"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content" />
   		

    	 <TextView 
    	    android:id="@+id/lblDate"
       	 	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text= "@string/current_date"
        	android:textAppearance="?android:attr/textAppearanceLarge"/>
    	 
    	 <TextView
    	    android:id="@+id/saleDate"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text=""
        	android:textAppearance="?android:attr/textAppearanceLarge"/>
    	 
		<Button
    	    android:id="@+id/change_date"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text= "@string/change_date" />
    	
    	
    	
    	
    	
    	<TextView
    	    android:id="@+id/volunteer_label"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/volunteers_title" />
    	
    	<EditText
    	    android:id="@+id/volunteer1"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

    	<EditText
    	    android:id="@+id/volunteer2"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

    	<EditText
    	    android:id="@+id/volunteer3"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

    	<EditText
    	    android:id="@+id/volunteer4"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

    	<Button
    	    android:id="@+id/continue_info"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:onClick="continueToWeather"
    	    android:text="@string/continue_text" />
    
</LinearLayout>