<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inventory2Activity" >

    <TextView
        android:id="@+id/inventory2Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/inventory2_instructions" />

    <Button
        android:id="@+id/inventory2Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:onClick="continueToSales"
        android:text="Continue" />

    <TextView
        android:id="@+id/inventory2Summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/inventory2Continue"
        android:layout_alignParentLeft="true"
        android:text="@string/inventory2_summary"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inventory2Continue"
        android:minWidth="400dp" >

        <TableRow
            android:id="@+id/table2Row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/mixed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/mixed_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/mixed_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </TableRow>

        <TableRow
            android:id="@+id/table2Row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/apple2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/apple_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/apple2_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/pear2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/pear_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/pear2_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/table2Row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/orange2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/orange_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/orange2_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/grapes2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/grapes_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/grapes2_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow
            android:id="@+id/table2Row4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/kiwi2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/kiwi_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/kiwi2_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/banana2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/banana_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/banana2_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

    </TableLayout>

    <GridView
        android:id="@+id/Inventory2Grid"
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tableLayout2"
        android:columnWidth="200dp"
        android:gravity="top"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" >

    </GridView>

</RelativeLayout>