<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   		<TextView
   		    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/school_title"
    	    />

   		<Spinner
   		    android:id="@+id/spinnerInfo1"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content" />

    	<TextView
    	    android:id="@+id/textView1"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/date_title" />

    	<EditText
    	    android:id="@+id/dateText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="date" >

    	    <requestFocus />
    	</EditText>

    	<TextView
    	    android:id="@+id/textView2"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/volunteers_title" />

    	<EditText
    	    android:id="@+id/editText1"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

    	<EditText
    	    android:id="@+id/editText2"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

    	<EditText
    	    android:id="@+id/editText3"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

    	<EditText
    	    android:id="@+id/editText4"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

    	<Button
    	    android:id="@+id/button1"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/continue_text" />
    
</LinearLayout>